--- a/_site.yml
+++ b/_site.yml
@@ -1,9 +1,15 @@
 name: "personal-website"
 output_dir: "."
 navbar:
-  title: "Personal Website"
+  title: "Sam Fuller"
   left:
-    - text: "Home"
-      href: index.html
     - text: "About Me"
       href: about.html
+    - text: "Research"
+      href: research.html
+    - text: "Coding"
+      href: code.html
+output:
+  html_document:
+    theme: flatly
+    css: style.css
