Fixed CV (again)

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,8 +15,7 @@ website:
         file: index.qmd
       - research.qmd
       - teaching.qmd
-      - text: CV
-        file: cv.html
+      - CV.qmd
     right:
       - icon: envelope
         text: Email
