Update for Harvard Postdoc

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,7 @@ website:
     right:
       - icon: envelope
         text: Email
-        href: "mailto:sjfuller@ucdavis.edu"
+        href: "mailto:sfuller@fas.harvard.edu"
       - icon: mortarboard
         text: Scholar
         href: https://scholar.google.com/citations?user=EAwVTAYAAAAJ&hl=en&oi=ao
